# generative-agents-agent-book

chapter10-gemini/: .env.sample  pyproject.toml
chapter10-gemini/documentation_agent/: main.py
chapter12-gemini/: .env.sample  pyproject.toml  settings.py
chapter12-gemini/common/: reflection_manager.py
chapter12-gemini/cross_reflection/: main.py
chapter12-gemini/multi_path_plan_generation/: main.py
chapter12-gemini/passive_goal_creator/: main.py
chapter12-gemini/prompt_optimizer/: main.py
chapter12-gemini/response_optimizer/: main.py
chapter12-gemini/role_based_cooperation/: main.py
chapter12-gemini/self_reflection/: main.py
chapter12-gemini/single_path_plan_generation/: main.py
