[project]
name = "chapter12-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "langchain-community>=0.3.12",
    "langchain-core>=0.3.25",
    "langchain-google-genai>=2.0.7",
    "langgraph>=0.2.59",
    "retry>=0.9.2",
]
